[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opencan-cand"
version = "0.0.5"
description = "A fast and super useful daemon for decoding and encoding CAN messages."
authors = [
    {name = "OpenCAN", email = "info@opencan.org"},
]

readme = "README.md"
requires-python = ">=3.9"
keywords = ["cand", "can", "canbus", "can bus"]
license = {text = "GPLv3"}

dependencies = [
    "redis >= 4.3.2",
]

