[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opencan-cand"
version = "0.0.6"
description = "A fast and super useful daemon for decoding and encoding CAN messages."
authors = [
    {name = "OpenCAN", email = "info@opencan.org"},
]

readme = "README.md"
requires-python = ">=3.9"
keywords = ["cand", "can", "canbus", "can bus"]
license = {text = "GPLv3"}

dependencies = [
    "cantools>=37.0.7",
    "coloredlogs>=15.0.1",
    "msgpack>=1.0.3",
    "python-can>=3.3.4",
    "redis>=4.3.2",
]

[project.urls]
"Homepage" = "https://github.com/opencan/cand"
